implemented left side structure html+css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,28 @@
 
     <main id="app">
 
-        
+        <div class="container-fluid py-3 px-5 px-xxl-5">
+            <div class="row px-xl-5">
+                <div id="explorer-chats" class="col-3">
+                    <div id="user-bar">
+                        user
+                    </div>
+                    <div id="notifications-config">
+                        notifications-config
+                    </div>
+                    <div id="search-bar">
+                        search-bar
+                    </div>
+                    <div id="messages">
+                        messages
+                    </div>
+
+                </div>
+                <div class="col-9">
+                    hello
+                </div>
+            </div>
+        </div>
 
 
 
