implemented chat html+css

--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
 
     <main id="app">
 
-        <div class="container-fluid py-3 px-5 px-xxl-5">
+        <div class="container-fluid px-5 px-xxl-5">
+
             <div class="row px-xl-5">
                 <div id="explorer-chats" class="col-3">
+
                     <div id="user-bar">
                         user
                     </div>
@@ -46,10 +48,19 @@
                     </div>
 
                 </div>
-                <div class="col-9">
-                    hello
+
+                <div id="chat" class="col-9">
+
+                    <div id="user-chat">
+                        user-chat
+                    </div>
+                    <div id="messages-chat">
+                        messages-chat
+                    </div>
+                    
                 </div>
             </div>
+
         </div>
 
 
