updated color (dark-theme)

--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
                     <div id="messages-chat">
                         messages-chat
                     </div>
+                    <div id="new-message">
+                        new-message
+                    </div>
+
                     
                 </div>
             </div>
