--- a/index.html
+++ b/index.html
@@ -34,8 +34,18 @@
             <div class="row px-xl-5">
                 <div id="explorer-chats" class="col-3">
 
-                    <div id="user-bar">
-                        user
+                    <div id="user-bar" class="d-flex justify-content-between align-items-center px-3">
+
+                        <div class="user-avatar">
+                            <a href=""><img class="rounded-circle " src="img/user" alt="user avatar"></a>
+                        </div>
+
+                        <div class="user-icons fs-5">
+                           <a href=""><i class="fa-solid fa-circle-notch text-light"></i></a>
+                           <a href=""><i class="fa-solid fa-message mx-4 text-light"></i></a>
+                           <a href=""><i class="fa-solid fa-ellipsis-vertical me-3 text-light"></i></a>
+                        </div>
+
                     </div>
                     <div id="notifications-config">
                         notifications-config
