--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
     <main id="app">
 
-        <div class="container-fluid px-5 px-xxl-5">
+        <div class="container-fluid px-5">
 
-            <div class="row px-xl-5">
+            <div class="row px-5">
                 <div id="explorer-chats" class="col-3">
 
                     <div id="user-bar" class="d-flex justify-content-between align-items-center px-3">
@@ -47,11 +47,20 @@
                         </div>
 
                     </div>
-                    <div id="notifications-config">
-                        notifications-config
+                    <div id="notifications-config" class="d-flex align-items-center px-3">
+
+                        <span class="icon-circle rounded-circle d-flex justify-content-center align-items-center p-3 me-3">
+                            <a href=""><i class="fa-solid fa-bell-slash text-dark fs-5"></i></a>
+                        </span>
+
+                        <div id="notifications-config-link">
+                            <h6 class="text-white mb-0">Get notified of new messages</h6>
+                            <a class="text-decoration-none" href=""><p>Turn on desktop notifications</p><i class="fa-solid fa-angle-right ms-1"></i></a>
+                        </div>
+                        
                     </div>
-                    <div id="search-bar">
-                        search-bar
+                    <div id="search-bar" class="d-flex align-items-center px-3">
+                        <span class="my-search-bar d-flex align-items-center px-3"><a class="text-decoration-none text-secondary" href=""><i class="fa-solid fa-magnifying-glass"></i></a><input class="form-control mr-sm-2 ms-2" type="search" placeholder="Search or start new chat" aria-label="Search"></span>
                     </div>
                     <div id="messages">
                         messages
