--- a/index.html
+++ b/index.html
@@ -60,10 +60,156 @@
                         
                     </div>
                     <div id="search-bar" class="d-flex align-items-center px-3">
+
                         <span class="my-search-bar d-flex align-items-center px-3"><a class="text-decoration-none text-secondary" href=""><i class="fa-solid fa-magnifying-glass"></i></a><input class="form-control mr-sm-2 ms-2" type="search" placeholder="Search or start new chat" aria-label="Search"></span>
+                    
                     </div>
                     <div id="messages">
-                        messages
+
+                        <div class="single-message d-flex px-3 pt-3">
+                            <div class="user-avatar">
+                                <a href=""><img class="rounded-circle " src="img/_1" alt="user avatar"></a>
+                            </div>
+                            <div class="single-message-content d-flex ms-3 justify-content-between align-items-start">
+                                <div class="single-message-content-text">
+                                    <h6 class="text-white mb-0">nome</h6>
+                                    <p class="text-secondary mb-3">testo</p>
+                                </div>
+                                <div class="single-message-content-date text-center">
+                                    <p class="text-secondary mb-0">21.55</p>
+                                    <i class="fa-solid fa-chevron-down text-secondary"></i>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="single-message d-flex px-3 pt-3">
+                            <div class="user-avatar">
+                                <a href=""><img class="rounded-circle " src="img/_1" alt="user avatar"></a>
+                            </div>
+                            <div class="single-message-content d-flex ms-3 justify-content-between align-items-start">
+                                <div class="single-message-content-text">
+                                    <h6 class="text-white mb-0">nome</h6>
+                                    <p class="text-secondary mb-3">testo</p>
+                                </div>
+                                <div class="single-message-content-date text-center">
+                                    <p class="text-secondary mb-0">21.55</p>
+                                    <i class="fa-solid fa-chevron-down text-secondary"></i>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="single-message d-flex px-3 pt-3">
+                            <div class="user-avatar">
+                                <a href=""><img class="rounded-circle " src="img/_1" alt="user avatar"></a>
+                            </div>
+                            <div class="single-message-content d-flex ms-3 justify-content-between align-items-start">
+                                <div class="single-message-content-text">
+                                    <h6 class="text-white mb-0">nome</h6>
+                                    <p class="text-secondary mb-3">testo</p>
+                                </div>
+                                <div class="single-message-content-date text-center">
+                                    <p class="text-secondary mb-0">21.55</p>
+                                    <i class="fa-solid fa-chevron-down text-secondary"></i>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="single-message d-flex px-3 pt-3">
+                            <div class="user-avatar">
+                                <a href=""><img class="rounded-circle " src="img/_1" alt="user avatar"></a>
+                            </div>
+                            <div class="single-message-content d-flex ms-3 justify-content-between align-items-start">
+                                <div class="single-message-content-text">
+                                    <h6 class="text-white mb-0">nome</h6>
+                                    <p class="text-secondary mb-3">testo</p>
+                                </div>
+                                <div class="single-message-content-date text-center">
+                                    <p class="text-secondary mb-0">21.55</p>
+                                    <i class="fa-solid fa-chevron-down text-secondary"></i>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="single-message d-flex px-3 pt-3">
+                            <div class="user-avatar">
+                                <a href=""><img class="rounded-circle " src="img/_1" alt="user avatar"></a>
+                            </div>
+                            <div class="single-message-content d-flex ms-3 justify-content-between align-items-start">
+                                <div class="single-message-content-text">
+                                    <h6 class="text-white mb-0">nome</h6>
+                                    <p class="text-secondary mb-3">testo</p>
+                                </div>
+                                <div class="single-message-content-date text-center">
+                                    <p class="text-secondary mb-0">21.55</p>
+                                    <i class="fa-solid fa-chevron-down text-secondary"></i>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="single-message d-flex px-3 pt-3">
+                            <div class="user-avatar">
+                                <a href=""><img class="rounded-circle " src="img/_1" alt="user avatar"></a>
+                            </div>
+                            <div class="single-message-content d-flex ms-3 justify-content-between align-items-start">
+                                <div class="single-message-content-text">
+                                    <h6 class="text-white mb-0">nome</h6>
+                                    <p class="text-secondary mb-3">testo</p>
+                                </div>
+                                <div class="single-message-content-date text-center">
+                                    <p class="text-secondary mb-0">21.55</p>
+                                    <i class="fa-solid fa-chevron-down text-secondary"></i>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="single-message d-flex px-3 pt-3">
+                            <div class="user-avatar">
+                                <a href=""><img class="rounded-circle " src="img/_1" alt="user avatar"></a>
+                            </div>
+                            <div class="single-message-content d-flex ms-3 justify-content-between align-items-start">
+                                <div class="single-message-content-text">
+                                    <h6 class="text-white mb-0">nome</h6>
+                                    <p class="text-secondary mb-3">testo</p>
+                                </div>
+                                <div class="single-message-content-date text-center">
+                                    <p class="text-secondary mb-0">21.55</p>
+                                    <i class="fa-solid fa-chevron-down text-secondary"></i>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="single-message d-flex px-3 pt-3">
+                            <div class="user-avatar">
+                                <a href=""><img class="rounded-circle " src="img/_1" alt="user avatar"></a>
+                            </div>
+                            <div class="single-message-content d-flex ms-3 justify-content-between align-items-start">
+                                <div class="single-message-content-text">
+                                    <h6 class="text-white mb-0">nome</h6>
+                                    <p class="text-secondary mb-3">testo</p>
+                                </div>
+                                <div class="single-message-content-date text-center">
+                                    <p class="text-secondary mb-0">21.55</p>
+                                    <i class="fa-solid fa-chevron-down text-secondary"></i>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="single-message d-flex px-3 pt-3">
+                            <div class="user-avatar">
+                                <a href=""><img class="rounded-circle " src="img/_1" alt="user avatar"></a>
+                            </div>
+                            <div class="single-message-content d-flex ms-3 justify-content-between align-items-start">
+                                <div class="single-message-content-text">
+                                    <h6 class="text-white mb-0">nome</h6>
+                                    <p class="text-secondary mb-3">testo</p>
+                                </div>
+                                <div class="single-message-content-date text-center">
+                                    <p class="text-secondary mb-0">21.55</p>
+                                    <i class="fa-solid fa-chevron-down text-secondary"></i>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
 
                 </div>
