--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
                     </div>
                     <div id="messages">
 
-                        <div class="single-message d-flex px-3 pt-3">
+                        <div v-for="contact in contacts" class="single-message d-flex px-3 pt-3">
                             <div class="user-avatar">
-                                <a href=""><img class="rounded-circle " src="img/_1" alt="user avatar"></a>
+                                <a href=""><img class="rounded-circle " :src="'img/' + contact.avatar" alt="user avatar"></a>
                             </div>
                             <div class="single-message-content d-flex ms-3 justify-content-between align-items-start">
                                 <div class="single-message-content-text">
-                                    <h6 class="text-white mb-0">nome</h6>
-                                    <p class="text-secondary mb-3">testo</p>
+                                    <h6 class="text-white mb-0">{{contact.name}}</h6>
+                                    <p class="text-secondary mb-3">Last message sent</p>
                                 </div>
                                 <div class="single-message-content-date text-center">
                                     <p class="text-secondary mb-0">21.55</p>
@@ -81,134 +81,7 @@
                                 </div>
                             </div>
                         </div>
-
-                        <div class="single-message d-flex px-3 pt-3">
-                            <div class="user-avatar">
-                                <a href=""><img class="rounded-circle " src="img/_1" alt="user avatar"></a>
-                            </div>
-                            <div class="single-message-content d-flex ms-3 justify-content-between align-items-start">
-                                <div class="single-message-content-text">
-                                    <h6 class="text-white mb-0">nome</h6>
-                                    <p class="text-secondary mb-3">testo</p>
-                                </div>
-                                <div class="single-message-content-date text-center">
-                                    <p class="text-secondary mb-0">21.55</p>
-                                    <i class="fa-solid fa-chevron-down text-secondary"></i>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="single-message d-flex px-3 pt-3">
-                            <div class="user-avatar">
-                                <a href=""><img class="rounded-circle " src="img/_1" alt="user avatar"></a>
-                            </div>
-                            <div class="single-message-content d-flex ms-3 justify-content-between align-items-start">
-                                <div class="single-message-content-text">
-                                    <h6 class="text-white mb-0">nome</h6>
-                                    <p class="text-secondary mb-3">testo</p>
-                                </div>
-                                <div class="single-message-content-date text-center">
-                                    <p class="text-secondary mb-0">21.55</p>
-                                    <i class="fa-solid fa-chevron-down text-secondary"></i>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="single-message d-flex px-3 pt-3">
-                            <div class="user-avatar">
-                                <a href=""><img class="rounded-circle " src="img/_1" alt="user avatar"></a>
-                            </div>
-                            <div class="single-message-content d-flex ms-3 justify-content-between align-items-start">
-                                <div class="single-message-content-text">
-                                    <h6 class="text-white mb-0">nome</h6>
-                                    <p class="text-secondary mb-3">testo</p>
-                                </div>
-                                <div class="single-message-content-date text-center">
-                                    <p class="text-secondary mb-0">21.55</p>
-                                    <i class="fa-solid fa-chevron-down text-secondary"></i>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="single-message d-flex px-3 pt-3">
-                            <div class="user-avatar">
-                                <a href=""><img class="rounded-circle " src="img/_1" alt="user avatar"></a>
-                            </div>
-                            <div class="single-message-content d-flex ms-3 justify-content-between align-items-start">
-                                <div class="single-message-content-text">
-                                    <h6 class="text-white mb-0">nome</h6>
-                                    <p class="text-secondary mb-3">testo</p>
-                                </div>
-                                <div class="single-message-content-date text-center">
-                                    <p class="text-secondary mb-0">21.55</p>
-                                    <i class="fa-solid fa-chevron-down text-secondary"></i>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="single-message d-flex px-3 pt-3">
-                            <div class="user-avatar">
-                                <a href=""><img class="rounded-circle " src="img/_1" alt="user avatar"></a>
-                            </div>
-                            <div class="single-message-content d-flex ms-3 justify-content-between align-items-start">
-                                <div class="single-message-content-text">
-                                    <h6 class="text-white mb-0">nome</h6>
-                                    <p class="text-secondary mb-3">testo</p>
-                                </div>
-                                <div class="single-message-content-date text-center">
-                                    <p class="text-secondary mb-0">21.55</p>
-                                    <i class="fa-solid fa-chevron-down text-secondary"></i>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="single-message d-flex px-3 pt-3">
-                            <div class="user-avatar">
-                                <a href=""><img class="rounded-circle " src="img/_1" alt="user avatar"></a>
-                            </div>
-                            <div class="single-message-content d-flex ms-3 justify-content-between align-items-start">
-                                <div class="single-message-content-text">
-                                    <h6 class="text-white mb-0">nome</h6>
-                                    <p class="text-secondary mb-3">testo</p>
-                                </div>
-                                <div class="single-message-content-date text-center">
-                                    <p class="text-secondary mb-0">21.55</p>
-                                    <i class="fa-solid fa-chevron-down text-secondary"></i>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="single-message d-flex px-3 pt-3">
-                            <div class="user-avatar">
-                                <a href=""><img class="rounded-circle " src="img/_1" alt="user avatar"></a>
-                            </div>
-                            <div class="single-message-content d-flex ms-3 justify-content-between align-items-start">
-                                <div class="single-message-content-text">
-                                    <h6 class="text-white mb-0">nome</h6>
-                                    <p class="text-secondary mb-3">testo</p>
-                                </div>
-                                <div class="single-message-content-date text-center">
-                                    <p class="text-secondary mb-0">21.55</p>
-                                    <i class="fa-solid fa-chevron-down text-secondary"></i>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="single-message d-flex px-3 pt-3">
-                            <div class="user-avatar">
-                                <a href=""><img class="rounded-circle " src="img/_1" alt="user avatar"></a>
-                            </div>
-                            <div class="single-message-content d-flex ms-3 justify-content-between align-items-start">
-                                <div class="single-message-content-text">
-                                    <h6 class="text-white mb-0">nome</h6>
-                                    <p class="text-secondary mb-3">testo</p>
-                                </div>
-                                <div class="single-message-content-date text-center">
-                                    <p class="text-secondary mb-0">21.55</p>
-                                    <i class="fa-solid fa-chevron-down text-secondary"></i>
-                                </div>
-                            </div>
-                        </div>
+                        
 
                     </div>
 
