--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                         </div>
 
                         <div class="user-icons fs-5">
-                           <a href=""><i class="fa-solid fa-circle-notch text-light"></i></a>
-                           <a href=""><i class="fa-solid fa-message mx-4 text-light"></i></a>
-                           <a href=""><i class="fa-solid fa-ellipsis-vertical me-3 text-light"></i></a>
+                           <a href=""><i class="fa-solid fa-circle-notch text-secondary"></i></a>
+                           <a href=""><i class="fa-solid fa-message mx-4 text-secondary"></i></a>
+                           <a href=""><i class="fa-solid fa-ellipsis-vertical me-3 text-secondary"></i></a>
                         </div>
 
                     </div>
@@ -67,7 +67,7 @@
                     <div id="messages">
 
                         <div v-for="(contact, index) in contactsCopy" class="single-message d-flex px-3 pt-3" @click="activeChat(contact, index)" :class="(contact == currentChat) ? 'active' : ''">
-                            <div class="user-avatar">
+                            <div class="contact-avatar">
                                 <img class="rounded-circle " :src="'img/' + contact.avatar" alt="user avatar">
                             </div>
                             <div class="single-message-content d-flex ms-3 justify-content-between align-items-start">
@@ -104,8 +104,8 @@
                         </div>
 
                         <div class="user-icons fs-5">
-                            <a href=""><i class="fa-solid fa-magnifying-glass mx-4 text-light"></i></a>
-                            <a href=""><i class="fa-solid fa-ellipsis-vertical me-3 text-light"></i></a>
+                            <a href=""><i class="fa-solid fa-magnifying-glass mx-4 text-secondary"></i></a>
+                            <a href=""><i class="fa-solid fa-ellipsis-vertical me-3 text-secondary"></i></a>
                          </div>
                         
                     </div>
@@ -121,8 +121,16 @@
                             </div>
                         </div>
                     </div>
-                    <div id="new-message">
-                        new-message
+                    <div id="new-message" class="d-flex align-items-center">
+                        <div class="icon-left text-center">
+                            <i class="fa-regular fa-face-smile text-secondary fs-4"></i>
+                        </div>
+                        <div class="new-message-input">
+                            <input class="form-control mr-sm-2" type="search" placeholder="Type a message" aria-label="Search">
+                        </div>
+                        <div class="icon-right text-center">
+                            <i class="fa-solid fa-microphone text-secondary fs-4"></i>
+                        </div>
                     </div>
 
                     
