--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div class="container-fluid px-5">
 
-            <div class="row px-5">
+            <div class="row">
                 <div id="explorer-chats" class="col-4">
 
                     <div id="user-bar" class="d-flex justify-content-between align-items-center px-3">
@@ -61,12 +61,12 @@
                     </div>
                     <div id="search-bar" class="d-flex align-items-center px-3">
 
-                        <span class="my-search-bar d-flex align-items-center px-3"><a class="text-decoration-none text-secondary" href=""><i class="fa-solid fa-magnifying-glass"></i></a><input class="form-control mr-sm-2 ms-2" type="search" placeholder="Search or start new chat" aria-label="Search"></span>
+                        <span class="my-search-bar d-flex align-items-center px-3"><a class="text-decoration-none text-secondary" href=""><i class="fa-solid fa-magnifying-glass"></i></a><input v-model="searchContact" class="form-control mr-sm-2 ms-2" type="search" placeholder="Search or start new chat" aria-label="Search"></span>
                     
                     </div>
                     <div id="messages">
 
-                        <div v-for="(contact, index) in contactsCopy" class="single-message d-flex px-3 pt-3" @click="activeChat(contact, index)" :class="(contact == currentChat) ? 'active' : ''">
+                        <div v-for="(contact, index) in contactsCopy" v-if="(contact.name.toLowerCase().startsWith(searchContact.toLowerCase()))" class="single-message d-flex px-3 pt-3" @click="activeChat(contact, index)" :class="(contact == currentChat) ? 'active' : ''">
                             <div class="contact-avatar">
                                 <img class="rounded-circle " :src="'img/' + contact.avatar" alt="user avatar">
                             </div>
