--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <div class="single-message-content d-flex ms-3 justify-content-between align-items-start">
                                 <div class="single-message-content-text">
                                     <h6 class="text-white mb-0">{{contact.name}}</h6>
-                                    <p class="text-secondary mb-3">Last message sent</p>
+                                    <p class="text-secondary mb-3">{{contact.messages[(contact.messages.length) - 1].message}}</p>
                                 </div>
                                 <div class="single-message-content-date text-center">
                                     <p class="text-secondary mb-0">21.55</p>
